2009-01-29	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* bsp_howto/console.t: Clarify interrupt transmit process.
	* user/concepts.t: Typo.

2008-12-19	Joel Sherrill <joel.sherrill@oarcorp.com>

	* index.html.in: Remove manuals that are dead.

2008-12-18	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* user/cpuuse.t: Reflect change in CPU Usage report format.

2008-12-15	Joel Sherrill <joel.sherrill@oarcorp.com>

	* user/init.t: Eliminate pointers to API configuration tables in the
	main configuration table. Reference the main configuration table and
	the API configuration tables directly using the confdefs.h version
	rather than obtaining a pointer to it. This eliminated some
	variables, a potential fatal error, some unnecessary default
	configuration structures. Overall, about a 4.5% reduction in the code
	size for minimum and hello on the SPARC.

2008-12-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	* user/conf.t, user/region.t: Change sizes of heap/region and allocated
	objects in heap to intptr_t so they can be larger than a single
	allocatable object (e.g. size_t).

2008-12-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	* user/region.t: Malloc Family is not implemented in termios of Region
	Manager after 4.7. Correct documentation.

2008-12-12	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* bsp_howto/console.t: Remove size constraints on image. Fix a
	sentence.

2008-12-11	Sebastian Huber <sebastian.huber@embedded-brains.de>
                Joel Sherrrill <joel.sherrill@oarcorp.com>

	* bsp_howto/Makefile.am, bsp_howto/console.t: Sebastian improved
	 documentation for termios device drivers.
	* bsp_howto/TERMIOSFlow.eps, bsp_howto/TERMIOSFlow.png: New files.
	Joel added Termios Flow figure from RTEMS Open Class material.

2008-12-04	Jukka Pietarinen <jukka.pietarinen@mrf.fi>

	* cpu_supplement/.cvsignore, cpu_supplement/Makefile.am,
	cpu_supplement/cpu_supplement.texi: Add Lattice Mico32 support.