@@ -1,3 +1,8 @@
+2009-02-12	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* porting/idlethread.t: Change prototype of IDLE thread to consistently
+	return void * and take a uintptr_t argument.
+
 2009-01-29	Sebastian Huber <sebastian.huber@embedded-brains.de>
 
 	* bsp_howto/console.t: Clarify interrupt transmit process.
